--- a/Step04-Height & Width/index.html
+++ b/Step04-Height & Width/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Height & Width Example</title>
+  <title>Height & Width</title>
   <style>
     .box {
       width: 300px;      
