--- a/Step02-Selectors/index.html
+++ b/Step02-Selectors/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CSS Selectors/title>
+  <title>CSS Selectors</title>
   <style>
     /* Universal Selector */
     * {
