--- a/Step03-Margin & Padding/index.html
+++ b/Step03-Margin & Padding/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Margin & Padding Example</title>
+  <title>Margin & Padding</title>
   <style>
     .box {
       width: 200px;
