--- a/Step07-Units/index.html
+++ b/Step07-Units/index.html
@@ -4,36 +4,32 @@
   <title>CSS Units Example</title>
   <style>
     .box-px {
-      width: 200px;       /* pixels */
+      width: 200px;     
       height: 100px;
       background-color: lightblue;
       margin-bottom: 20px;
     }
-
     .box-percent {
-      width: 50%;         /* percentage of parent */
+      width: 50%;       
       height: 100px;
       background-color: lightgreen;
       margin-bottom: 20px;
     }
-
     .box-em {
-      width: 20em;        /* relative to font-size of element */
+      width: 20em;      
       height: 5em;
       background-color: lightcoral;
       margin-bottom: 20px;
     }
-
     .box-rem {
-      width: 20rem;       /* relative to font-size of root */
+      width: 20rem;     
       height: 5rem;
       background-color: lightgoldenrodyellow;
       margin-bottom: 20px;
     }
-
     .box-vw {
-      width: 50vw;        /* 50% of viewport width */
-      height: 20vh;       /* 20% of viewport height */
+      width: 50vw;      
+      height: 20vh;    
       background-color: lightpink;
     }
   </style>
