--- a/Step08-Borders/index.html
+++ b/Step08-Borders/index.html
@@ -2,33 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CSS Borders and Outline</title>
+  <title>Borders</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       padding: 20px;
     }
-
     .box {
       margin: 20px 0;
       padding: 15px;
       width: 250px;
     }
-
     .border-example {
       border: 3px solid green;
     }
-
     .border-radius {
       border: 2px dashed blue;
       border-radius: 10px;
     }
-
     .outline-example {
       border: 2px solid black;
       outline: 3px dotted red;
     }
-
     .outline-offset {
       border: 2px solid gray;
       outline: 3px solid orange;
@@ -37,16 +32,10 @@
   </style>
 </head>
 <body>
-
-  <h2>CSS Borders and Outline Examples</h2>
-
+  <h2>CSS Borders</h2>
   <div class="box border-example">This box has a solid green border.</div>
-
   <div class="box border-radius">This box has a dashed blue border with rounded corners.</div>
-
   <div class="box outline-example">This box has a border + dotted red outline.</div>
-
   <div class="box outline-offset">This box has an outline with offset spacing.</div>
-
 </body>
 </html>
