--- a/Step11-Box Model/index.html
+++ b/Step11-Box Model/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>CSS Box Model</title>
+  <title>Box Model</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       padding: 30px;
     }
-
     .box {
       width: 200px;
       height: 100px;
@@ -18,7 +17,6 @@
       margin: 20px;
       color: black;
     }
-
     .info {
       background-color: #e3f2fd;
       padding: 10px;
@@ -27,14 +25,10 @@
   </style>
 </head>
 <body>
-
-  <h2>CSS Box Model Example</h2>
-
+  <h2>Box Model</h2>
   <div class="box">This is a Box Model Element</div>
-
   <div class="info">
     <strong>Structure:</strong> Margin → Border → Padding → Content
   </div>
-
 </body>
 </html>
