--- a/Step13-Positioning & Z-index/index.html
+++ b/Step13-Positioning & Z-index/index.html
@@ -20,6 +20,6 @@
   <div class="sticky">Sticky (scroll down)</div>
   <div class="z1">Z-index 1</div>
   <div class="z2">Z-index 2 (above)</div>
-  <div style="height:300px;"></div> <!-- for scroll to see sticky -->
+  <div style="height:300px;"></div> 
 </body>
 </html>
