--- a/Step01-Types of CSS/external.html
+++ b/Step01-Types of CSS/external.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <h2>Hello External CSS!</h2>
-  <p>This paragraph uses external CSS.</p>
+  <p>This paragraph uses external CSS</p>
 </body>
 </html>
